# medicine-genai-langgraph

./: .env  .gitignore  LICENSE  README.md  requirements.txt  test_openai.py
backend/: .env  app.py  config.py  pyproject.toml
backend/app/: main.py
backend/chroma_db/: chroma.sqlite3
backend/graph/: bi_molecule_data.ttl  bi_ontology.ttl  paracetmol.ttl
backend/scripts/: chroma_test.py  ingest_chroma.py  ingest_pinecone.py  load_graph.py  load_table.py  seed_sql_demo.py
backend/sql/: citations_paracetamol.csv  schema.sql
chroma_db/: chroma.sqlite3
data/: medical.db
data/sql/: citations.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
